syntax = "proto2";

option csharp_namespace = "Tailmail.Protos";

package tailmail;

message Peer {
  optional string user_name = 1;
  optional string server = 2;
}

message Settings {
  optional string user_name = 1;
  repeated Peer peers = 2;
}
